[package]
name = "piles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["cargo"] }
inkwell = { version = "0.1", default-features = false, features = ["llvm15-0", "target-x86"] }
